(env
 (dev
  (flags (:standard
          -strict-formats     ;; Disallows legacy formats.
          -strict-sequence    ;; Enforces the lhs of a sequence to have type `unit'.
          -safe-string        ;; Immutable strings.
          -annot              ;; Dumps information per (file) module about types, bindings, tail-calls, etc. Used by some tools.
          -warn-error -a      ;; Do not treat warnings as errors.
          -w A-4-42-44-45-48-60-67  ;; Ignores warnings 4, 42, 44, 45, 48, 60, and 67.
          -g                  ;; Adds debugging information to the resulting executable / library.
 )))
 (release
  (flags (:standard
          ;; The following flags are the same as for the "dev" profile.
          -strict-formats -strict-sequence -safe-string -annot
          -w A-4-42-44-45-48-60-67  ;; Ignores warnings 4, 42, 44, 45, 48, 60, and 67.
  ))
  (ocamlopt_flags (:standard
                   -O3 ;; Applies (aggressive) optimisations to the resulting executable.
 )))
)

(copy_files text/*.mly)
(copy_files# text/*.ml{,i,l})

(library
 (name hx_text)
 (public_name hx.text)
 (wrapped true)
 (libraries menhirLib)
 (modules lexer parser))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --strict))

(copy_files# compilerlibs/hx.ml{,i})

(library
 (name hx)
 (public_name hx)
 (wrapped false)
 (modules hx)
 (libraries (re_export hx.text)))

(copy_files# driver/*.ml{,i})

(executable
 (name main)
 (modes native)
 (libraries stdlib hx)
 (modules main repl))

(rule
  (copy main.exe hx))
