(env
 (dev
  (flags (:standard
          -strict-formats     ;; Disallows legacy formats.
          -strict-sequence    ;; Enforces the lhs of a sequence to have type `unit'.
          -safe-string        ;; Immutable strings.
          -annot              ;; Dumps information per (file) module about types, bindings, tail-calls, etc. Used by some tools.
          -warn-error -a      ;; Do not treat warnings as errors.
          -w A-4-42-44-45-48-60-67  ;; Ignores warnings 4, 42, 44, 45, 48, 60, and 67.
          -g                  ;; Adds debugging information to the resulting executable / library.
 )))
 (release
  (flags (:standard
          ;; The following flags are the same as for the "dev" profile.
          -strict-formats -strict-sequence -safe-string -annot
          -w A-4-42-44-45-48-60-67  ;; Ignores warnings 4, 42, 44, 45, 48, 60, and 67.
  ))
  (ocamlopt_flags (:standard
                   -O3 ;; Applies (aggressive) optimisations to the resulting executable.
 )))
)

;; COMPILER LIBS package ;;

;; Common
(copy_files# common/*.ml{,i})
(library
 (name hx_common)
 (public_name hx-compiler-libs.common)
 (modules settings))

;; Text
(copy_files text/*.mly)
(copy_files# text/*.ml{,i,l})
(library
 (name hx_text)
 (public_name hx-compiler-libs.text)
 (wrapped true)
 (modules lexer parser incparser)
 (libraries menhirLib))
(ocamllex
 (modules lexer))
(menhir
 (modules parser)
 (flags --strict))
(menhir
 (modules incparser)
 (flags --strict --table))

; Syntax error messages
(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

;; Bundle everything into `Hx` compiler libs
(copy_files# compilerlibs/hx.ml{,i})
(library
 (name hx)
 (public_name hx-compiler-libs)
 (wrapped false)
 (modules hx)
 (libraries
  (re_export hx-compiler-libs.common)
  (re_export hx-compiler-libs.text)
))

;; EXECUTABLES ;;

;; Main driver
(copy_files# driver/*.ml{,i})
(executable
 (name main)
 (public_name hx)
 (modes native)
 (libraries stdlib hx-compiler-libs)
 (modules main repl)
 (package hx))
(rule
  (copy main.exe hx))
