opam-version: "2.0"
maintainer: "Daniel Hillerström"
authors: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
synopsis: "The HX Programming Language"
description: "An effect handler-oriented programming language."
homepage: "https://www.github.com/dhil/hx"
dev-repo: "git+https://github.com/dhil/hx.git"
bug-reports: "https://github.com/dhil/hx/issues"
license: "GPL-3.0-or-later"


build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.4.1"}
  "menhir" {>= "20220210"}
]
